--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: "3"
 services:
-  mowgli-gui-app:
+  mcs-portal-app:
     build:
-      context: ..
-      dockerfile: gui/Dockerfile
-    container_name: mowgli-gui-app
-  mowgli-gui-gui:
+      context: .
+      dockerfile: Dockerfile
+    container_name: mcs-portal-app
+  mcs-portal-gui:
     build:
       # Use the same context to share a .dockerignore
-      context: ..
-      dockerfile: gui/gui/Dockerfile
-    container_name: mowgli-gui-gui
+      context: .
+      dockerfile: gui/Dockerfile
+    container_name: mcs-portal-gui
     ports:
       - 127.0.0.1:8080:80
   neo4j:
     build:
-      context: ..
-      dockerfile: gui/neo4j/Dockerfile
+      context: .
+      dockerfile: neo4j/Dockerfile
     container_name: neo4j
     ports:
       - 7474:7474 # HTTP
