--- a/gui/Dockerfile
+++ b/gui/Dockerfile
@@ -1,9 +1,9 @@
 # Build
 FROM node:12 as build
 WORKDIR /app
-COPY /gui/gui/package.json .
+COPY /gui/package.json .
 RUN npm install
-COPY /gui/gui .
+COPY /gui .
 RUN npm run build
 
 # Deployment
@@ -11,7 +11,7 @@ FROM nginx:1.17.10
 
 RUN apt-get update && apt-get install -y curl
 
-COPY /gui/gui/nginx.conf /etc/nginx/conf.d/default.conf
+COPY /gui/nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build /app/dist /usr/share/nginx/html
 
