fix documentation, CircleCI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
           name: Build and test
           command: |
             cp -p -R /tmp/workspace/dist/gui gui/public
-            sbt test "project guiApp" playUpdateSecret dist
+            sbt test playUpdateSecret dist
             cd target/universal && unzip -qq mcs-portal-app*.zip && rm mcs-portal-app*.zip && mkdir ~/dist && mv mcs-portal-app-*-SNAPSHOT ~/dist/app
       - store_test_results:
           path: target/test-reports
