adapt .dockerignore to project change

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,9 @@
 /.circleci/
-/etl/
 /.git/
-/gui/data/
-/gui/gui/dist/
+/data/
+/gui/dist/
 /.idea/
 LICENSE/
-**/.pytest_cache/
 README.md
 **/node_modules/
 **/target/
