first cut of import controller

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,6 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
+importDirectoryPath = "data/app/import"
 neo4j.password = "nC1aB4mji623s2Zs"
 neo4j.uri = "bolt://neo4j:7687"
 neo4j.user = "neo4j"
