--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,19 +20,15 @@ jobs:
           command: |
             sleep 60
       - run:
-          name: Bootstrap the database
-          command: |
-            script/bootstrap-neo4j
-      - run:
           name: Load the database
           command: |
             bzip2 -d -f conf/test_data/edges.csv.bz2 > conf/test_data/edges.csv
             bzip2 -d -f conf/test_data/nodes.csv.bz2 > conf/test_data/nodes.csv
             # Can't do volume mounts in CircleCI Docker, so have to copy
-            docker cp conf/test_data/edges.csv neo4j:/var/lib/neo4j/import/edges.csv
-            docker cp conf/test_data/nodes.csv neo4j:/var/lib/neo4j/import/nodes.csv
+            docker cp conf/test_data/edges.csv mcs-portal-app:/app/data/app/import/edges.csv
+            docker cp conf/test_data/nodes.csv mcs-portal-app:/app/data/app/import/nodes.csv
             rm conf/test_data/*.csv
-            script/load-neo4j
+            script/import-cskg
       - run:
           name: Test that the database is loaded
           command: |
