--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,7 @@ jobs:
             - dist/gui
 orbs:
   cypress: cypress-io/cypress@1
+  slack: circleci/slack@3.4.2
 workflows:
   version: 2
   build:
@@ -122,6 +123,7 @@ workflows:
                 path: test/integration/cypress/screenshots
             - store_artifacts:
                 path: test/integration/cypress/videos
+            - slack/status
           requires:
             - cypress/install
           start: |
