circleci: add slack status to docker job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,8 @@ workflows:
           filters:
             branches:
               only: master
+          post-steps:
+            -slack/status
       - scala:
           requires:
             - ts
