adjusting more paths

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,11 @@ jobs:
       - run:
           name: Load the database
           command: |
-            bzip2 -d -f conf/test_data/edges.csv.bz2 > conf/test_data/edges.csv
-            bzip2 -d -f conf/test_data/nodes.csv.bz2 > conf/test_data/nodes.csv
+            bzip2 -d -f conf/test_data/kg/edges.csv.bz2 > conf/test_data/kg/edges.csv
+            bzip2 -d -f conf/test_data/kg/nodes.csv.bz2 > conf/test_data/kg/nodes.csv
             # Can't do volume mounts in CircleCI Docker, so have to copy
-            docker cp conf/test_data/edges.csv mcs-portal-app:/app/data/import/edges.csv
-            docker cp conf/test_data/nodes.csv mcs-portal-app:/app/data/import/nodes.csv
+            docker cp conf/test_data/kg/edges.csv mcs-portal-app:/app/data/import/kg/edges.csv
+            docker cp conf/test_data/kg/nodes.csv mcs-portal-app:/app/data/import/kg/nodes.csv
             rm conf/test_data/*.csv
             script/import-cskg
       - run:
