--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
     docker:
       - image: circleci/openjdk:11
       - image: neo4j:4.0.4
-        name: neo4j
+        name: mcs-portal-neo4j
         environment:
           NEO4J_AUTH: neo4j/nC1aB4mji623s2Zs
           NEO4JLABS_PLUGINS: '["apoc"]'
