--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,7 +2,7 @@
 
 importDirectoryPath = "data/import"
 neo4j.password = "nC1aB4mji623s2Zs"
-neo4j.uri = "bolt://neo4j:7687"
+neo4j.uri = "bolt://mcs-portal-neo4j:7687"
 neo4j.user = "neo4j"
 play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
