--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,17 +21,17 @@ services:
     build:
       context: .
       dockerfile: neo4j/Dockerfile
-    container_name: neo4j
+    container_name: mcs-portal-neo4j
     ports:
       - 7474:7474 # HTTP
       - 7687:7687 # Bolt
     volumes:
-      - neo4j-data:/data
-      - neo4j-logs:/logs
-      - neo4j-import:/var/lib/neo4j/import
-      - neo4j-plugins:/plugins
+      - mcs-portal-neo4j-data:/data
+      - mcs-portal-neo4j-logs:/logs
+      - mcs-portal-neo4j-import:/var/lib/neo4j/import
+      - mcs-portal-neo4j-plugins:/plugins
 volumes:
-  neo4j-data:
-  neo4j-import:
-  neo4j-logs:
-  neo4j-plugins:
+  mcs-portal-neo4j-data:
+  mcs-portal-neo4j-import:
+  mcs-portal-neo4j-logs:
+  mcs-portal-neo4j-plugins:
