--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: mcs-portal-app
+    restart: unless-stopped
     volumes:
       - ./data:/app/data
   gui:
@@ -17,6 +18,7 @@ services:
       - app
     ports:
       - 127.0.0.1:8080:80
+    restart: unless-stopped
   neo4j:
     build:
       context: .
@@ -25,6 +27,7 @@ services:
     ports:
       - 7474:7474 # HTTP
       - 7687:7687 # Bolt
+    restart: unless-stopped
     volumes:
       - mcs-portal-neo4j-data:/data
       - mcs-portal-neo4j-logs:/logs
