--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,8 @@ jobs:
       - run:
           name: Wait for the server to start
           command: |
-            sleep 60
+            docker exec mcs-portal-app curl --retry 5 --retry-connrefused -s http://localhost:9000
+            docker exec mcs-portal-gui curl --retry 5 --retry-connrefused -s http://localhost
       - run:
           name: Load the database
           command: |
