--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,9 @@ node_modules/
 .metals/
 *.pyc
 /project/project/
-/project/target/
 /project/metals.sbt
 .python-version
-/target/
+target/
 /test/integration/cypress/plugins/
 /test/integration/cypress/videos/
 /test/integration/cypress/screenshots/
