remove accidentally checked in files

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 *.bloop
 /data/import/kg/*.csv
 node_modules/
-/gui/dist/
-/gui/package-lock.json
+**/gui/dist/
+**/gui/package-lock.json
 /.idea/
 *.iml
-/logs/
+logs/
 .metals/
 *.pyc
 /project/project/
 /project/metals.sbt
 .python-version
 target/
-/test/integration/cypress/plugins/
-/test/integration/cypress/videos/
-/test/integration/cypress/screenshots/
+**/test/integration/cypress/plugins/
+**/test/integration/cypress/videos/
+**/test/integration/cypress/screenshots/
