--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,15 +60,15 @@ jobs:
       - run:
           name: Build and test
           command: |
-            cp -p -R /tmp/workspace/dist/gui public
+            cp -p -R /tmp/workspace/dist/kg-gui app/kg/public
             sbt test playUpdateSecret dist
-            mkdir -p test-results
-            cp -p -R target/test-results test-results/app
-            cp -p -R lib/scala/benchmark/target/test-results test-results/benchmark-lib
-            cp -p -R lib/scala/kg/target/test-results test-results/kg-lib
+            mkdir -p test-reports
+            cp -p -R app/kg/target/test-reports test-reports/kg-app
+            cp -p -R lib/scala/benchmark/target/test-reports test-reports/benchmark-lib
+            cp -p -R lib/scala/kg/target/test-reports test-reports/kg-lib
             cd target/universal && unzip -qq mcs-portal-app*.zip && rm mcs-portal-app*.zip && mkdir ~/dist && mv mcs-portal-app-*-SNAPSHOT ~/dist/app
       - store_test_results:
-          path: test-results
+          path: test-reports
       - persist_to_workspace:
           root: ~/
           paths:
@@ -86,27 +86,27 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: ts-dependency-cache-v1-{{ checksum "gui/package.json" }}
+          key: ts-dependency-cache-v2-{{ checksum "app/kg/gui/package.json" }}
       - run:
           name: Install dependencies
           command: |
-            cd gui
+            cd app/kg/gui
             npm install
       - save_cache:
-          key: ts-dependency-cache-v1-{{ checksum "gui/package.json" }}
+          key: ts-dependency-cache-v2-{{ checksum "app/kg/gui/package.json" }}
           paths:
-            - gui/node_modules
+            - app/kg/gui/node_modules
       - run:
           name: Build
           command: |
-            cd gui
+            cd app/kg/gui
             npm run build
             mkdir ~/dist
-            mv dist ~/dist/gui
+            mv dist ~/dist/kg-gui
       - persist_to_workspace:
           root: ~/
           paths:
-            - dist/gui
+            - dist/kg-gui
 orbs:
   cypress: cypress-io/cypress@1
   slack: circleci/slack@3.4.2
