--- a/app/kg/gui/package.json
+++ b/app/kg/gui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcs-portal-gui",
+  "name": "mcs-portal-kg-gui",
   "version": "1.0.0",
   "description": "MCS Portal",
   "dependencies": {
