--- a/neo4j/docker-compose.yml
+++ b/neo4j/docker-compose.yml
@@ -1,29 +1,15 @@
 version: "3"
+networks:
+  mcs-portal:
+    name: mcs-portal
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: mcs-portal-app
-    restart: unless-stopped
-    volumes:
-      - ./data:/app/data
-  gui:
-    build:
-      # Use the same context to share a .dockerignore
-      context: .
-      dockerfile: gui/Dockerfile
-    container_name: mcs-portal-gui
-    depends_on:
-      - app
-    ports:
-      - 127.0.0.1:8080:80
-    restart: unless-stopped
   neo4j:
     build:
       context: .
       dockerfile: neo4j/Dockerfile
     container_name: mcs-portal-neo4j
+    networks:
+      - mcs-portal
     ports:
       - 7474:7474 # HTTP
       - 7687:7687 # Bolt
