--- a/app/kg/docker-compose.yml
+++ b/app/kg/docker-compose.yml
@@ -1,12 +1,12 @@
-version: "3"
+version: "3.5"
 networks:
   mcs-portal:
     name: mcs-portal
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ../..
+      dockerfile: app/kg/Dockerfile
     container_name: mcs-portal-kg-app
     networks:
       - mcs-portal
@@ -16,8 +16,8 @@ services:
   gui:
     build:
       # Use the same context to share a .dockerignore
-      context: .
-      dockerfile: gui/Dockerfile
+      context: ../..
+      dockerfile: app/kg/gui/Dockerfile
     container_name: mcs-portal-kg-gui
     depends_on:
       - app
