--- a/neo4j/docker-compose.yml
+++ b/neo4j/docker-compose.yml
@@ -1,11 +1,12 @@
-version: "3"
+version: "3.5"
 networks:
   mcs-portal:
     name: mcs-portal
 services:
   neo4j:
     build:
-      context: .
+      # Use the same context to share a .dockerignore
+      context: ..
       dockerfile: neo4j/Dockerfile
     container_name: mcs-portal-neo4j
     networks:
