stripping mcs-portal prefix

--- a/app/kg/Dockerfile
+++ b/app/kg/Dockerfile
@@ -14,10 +14,10 @@ FROM ubuntu:18.04
 
 RUN apt-get update && apt-get install -y curl default-jre-headless unzip
 
-COPY --from=build /build/app/kg/target/universal/mcs-portal-kg-app-1.0.0-SNAPSHOT.zip /
-RUN unzip -q mcs-portal-kg-app-1.0.0-SNAPSHOT.zip && mv /mcs-portal-kg-app-1.0.0-SNAPSHOT /app && chmod +x /app/bin/mcs-portal-kg-app
+COPY --from=build /build/app/kg/target/universal/kg-app-1.0.0-SNAPSHOT.zip /
+RUN unzip -q kg-app-1.0.0-SNAPSHOT.zip && mv /kg-app-1.0.0-SNAPSHOT /app && chmod +x /app/bin/kg-app
 
-COPY /docker-entrypoint.sh /
+COPY /app/kg/docker-entrypoint.sh /
 
 EXPOSE 9000
 
