--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,17 +37,17 @@ jobs:
             # Copy a file in in order to use -f
             # If we cat the Cypher into the docker exec then the cypher-shell doesn't print anything.
             echo "MATCH (n) RETURN COUNT(n);" >test-neo4j.cypher
-            docker cp test-neo4j.cypher mcs-portal-neo4j:/var/lib/neo4j
-            docker exec --interactive mcs-portal-neo4j cypher-shell -u neo4j -p nC1aB4mji623s2Zs --non-interactive -f test-neo4j.cypher
+            docker cp test-neo4j.cypher mcs-neo4j:/var/lib/neo4j
+            docker exec --interactive mcs-neo4j cypher-shell -u neo4j -p nC1aB4mji623s2Zs --non-interactive -f test-neo4j.cypher
       - run:
           name: Test that the user interface is up
           command: |
-            docker exec mcs-portal-kg-gui curl --retry 5 --retry-connrefused http://localhost &>/dev/null
+            docker exec kg-gui curl --retry 5 --retry-connrefused http://localhost &>/dev/null
   kg-app-scala:
     docker:
       - image: circleci/openjdk:11
       - image: neo4j:4.0.4
-        name: mcs-portal-neo4j
+        name: mcs-neo4j
         environment:
           NEO4J_AUTH: neo4j/nC1aB4mji623s2Zs
           NEO4JLABS_PLUGINS: '["apoc"]'
@@ -66,7 +66,7 @@ jobs:
             cp -p -R app/kg/target/test-reports test-reports/kg-app
             cp -p -R lib/scala/benchmark/target/test-reports test-reports/benchmark-lib
             cp -p -R lib/scala/kg/target/test-reports test-reports/kg-lib
-            cd app/kg/target/universal && unzip -qq mcs-portal-kg-app*.zip && rm mcs-portal-kg-app*.zip && mkdir ~/dist && mv mcs-portal-kg-app-*-SNAPSHOT ~/dist/kg-app
+            cd app/kg/target/universal && unzip -qq kg-app*.zip && rm kg-app*.zip && mkdir ~/dist && mv kg-app-*-SNAPSHOT ~/dist/kg-app
       - store_test_results:
           path: test-reports
       - persist_to_workspace:
@@ -140,7 +140,7 @@ workflows:
             cp ~/project/.circleci/cypress.json .
             apt-get update && apt-get install -y default-jre
             cd ~/dist/kg-app
-            bin/mcs-portal-kg-app -DtestIntegration
+            bin/kg-app -DtestIntegration
           wait-on: "http-get://localhost:9000/index.html"
           working_directory: test/integration
       - kg-app-docker:
