--- a/app/kg/docker-compose.yml
+++ b/app/kg/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3.5"
 networks:
-  mcs-portal:
-    name: mcs-portal
+  mcs:
+    name: mcs
 services:
   app:
     build:
       context: ../..
       dockerfile: app/kg/Dockerfile
-    container_name: mcs-portal-kg-app
+    container_name: kg-app
     networks:
-      - mcs-portal
+      - mcs
     restart: unless-stopped
     volumes:
       - ./data:/app/data
@@ -18,11 +18,11 @@ services:
       # Use the same context to share a .dockerignore
       context: ../..
       dockerfile: app/kg/gui/Dockerfile
-    container_name: mcs-portal-kg-gui
+    container_name: kg-gui
     depends_on:
       - app
     networks:
-      - mcs-portal
+      - mcs
     ports:
       - 127.0.0.1:8080:80
     restart: unless-stopped
