--- a/app/kg/gui/Dockerfile
+++ b/app/kg/gui/Dockerfile
@@ -1,9 +1,9 @@
 # Build
 FROM node:12 as build
-WORKDIR /app
-COPY /gui/package.json .
+WORKDIR /build
+COPY /app/kg/gui/package.json .
 RUN npm install
-COPY /gui .
+COPY /app/kg/gui .
 RUN npm run build
 
 # Deployment
@@ -11,8 +11,8 @@ FROM nginx:1.17.10
 
 RUN apt-get update && apt-get install -y curl
 
-COPY /gui/nginx.conf /etc/nginx/conf.d/default.conf
+COPY /app/kg/gui/nginx.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /build/dist /usr/share/nginx/html
 
 EXPOSE 80
